# irgen-py

./: README.md  pyproject.toml
src/irgen/: attribute.py  config.py  main.py  parser.py  template.py
src/irgen/schema/: ipxact.py
